[package]
name = "darwin-v7"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Unofficial rust client for the [V7 annotation platform](https://darwin.v7labs.com/)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fake = { version = "2.5", features = ["derive", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8.5"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1.66"

[dev-dependencies]
tempfile = "3.3"
wiremock = "0.5"
tokio = { version = "1.25", features = ["full"] }
