[package]
name = "darwin-v7"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Unofficial rust client for the [V7 annotation platform](https://darwin.v7labs.com/)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fake = { version = "2.9", features = ["derive", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "0.1"
rand = "0.8.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.24"
log = "0.4"
futures = "0.3"
csv-async = "1.2"

[dev-dependencies]
tempfile = "3.9"
wiremock = "0.5"
tokio = { version = "1.35", features = ["full"] }
