[package]
name = "darwin-v7"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Unofficial rust client for the [V7 annotation platform](https://darwin.v7labs.com/)"
repository = "https://github.com/franklin-ai/darwin-v7"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
fake = { version = "4.0", features = ["derive", "always-true-rng"] }
reqwest = { version = "0.12", features = ["http2", "json", "macos-system-configuration"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "0.1"
rand = "0.9.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
futures = "0.3"
csv-async = "1.3"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
tokio = { version = "1.37", features = ["full"] }
